--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -11,6 +11,7 @@ jobs:
       - name: python
         run: a = [i for i in range(1,10)]
              print(a)
+             print('Hello sree')
                  
        
      
