--- a/.github/workflows/ec2.yaml
+++ b/.github/workflows/ec2.yaml
@@ -19,8 +19,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRETE_KEY }}
+        aws-access-key-id: AKIAR4HMVUUY25USNNGJ
+        aws-secret-access-key: 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
         aws-region: us-east-1
         
     - name: intializing terraform
