--- a/.github/workflows/ec2.yaml
+++ b/.github/workflows/ec2.yaml
@@ -18,8 +18,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: AKIAR4HMVUUY3Y6UQJ3L
-        aws-secret-access-key: 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
+        aws-access-key-id: AKIAR4HMVUUYSNFHCC53
+        aws-secret-access-key: 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
         aws-region: us-east-1
         
     - name: Now We Intializing terraform
